# npuzzle

./: .gitignore  3x3  3x3_easy  3x3_hard  3x3_medium  3x3_new  4x4  4x4_easy  4x4_hard  4x4_medium  4x4_new  5x5  CMakeLists.txt  Node.class.php  Node.cpp  Node.h  author  heuristics.php  huristics.cpp  main.cpp  nodeclass.py  npuzzle-3-1.txt  npuzzle-3-2.txt  npuzzle-3-3.txt  npuzzle-4-1.txt  npuzzle-4-2.txt  npuzzle-4-3.txt  npuzzle-5-1.txt  npuzzle-5-2.txt  npuzzle-5-3.txt  npuzzle.h  npuzzle.php  npuzzle.py  parse.cpp  parse.php  solve.cpp  solve.php  suportFunctions.cpp  suportFunctions.h
